--- a/app/src/main/res/layout/activity_profile_edit.xml
+++ b/app/src/main/res/layout/activity_profile_edit.xml
@@ -324,7 +324,7 @@
                             android:src="@drawable/icon_orientation"
                             android:padding="8dp"/>
                         <Spinner
-                            android:id="@+id/spinner_my_orientation"
+                            android:id="@+id/spinner_my_orientation_edit"
                             android:layout_width="match_parent"
                             android:layout_height="40dp"
                             android:paddingLeft="2dp"
@@ -358,14 +358,17 @@
                         android:orientation="horizontal">
 
                         <Button
+                            android:id="@+id/search_man_edit"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textAllCaps="false"
                             android:background="@drawable/border_left_green"
                             android:text="@string/men"
+                            android:textColor="@color/white"
                             android:textSize="16sp"/>
 
                         <Button
+                            android:id="@+id/search_woman_edit"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textAllCaps="false"
@@ -374,6 +377,16 @@
                             android:textSize="16sp"/>
 
                         <Button
+                            android:id="@+id/search_both_edit"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textAllCaps="false"
+                            android:background="@drawable/border_gray_transparent"
+                            android:text="@string/both"
+                            android:textSize="16sp"/>
+
+                        <Button
+                            android:id="@+id/search_other_edit"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textAllCaps="false"
@@ -544,14 +557,17 @@
                         android:orientation="horizontal">
 
                         <Button
+                            android:id="@+id/children_yes_edit"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textAllCaps="false"
                             android:background="@drawable/border_left_green"
                             android:text="@string/yes"
+                            android:textColor="@color/white"
                             android:textSize="16sp"/>
 
                         <Button
+                            android:id="@+id/children_no_edit"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textAllCaps="false"
@@ -560,6 +576,7 @@
                             android:textSize="16sp"/>
 
                         <Button
+                            android:id="@+id/children_indifferent_edit"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textAllCaps="false"
@@ -591,14 +608,17 @@
                         android:orientation="horizontal">
 
                         <Button
+                            android:id="@+id/pets_yes_edit"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textAllCaps="false"
+                            android:textColor="@color/white"
                             android:background="@drawable/border_left_green"
                             android:text="@string/yes"
                             android:textSize="16sp"/>
 
                         <Button
+                            android:id="@+id/pets_no_edit"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textAllCaps="false"
@@ -607,6 +627,7 @@
                             android:textSize="16sp"/>
 
                         <Button
+                            android:id="@+id/pets_indifferent_edit"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textAllCaps="false"
@@ -639,22 +660,24 @@
                         android:orientation="horizontal">
 
                         <Button
+                            android:id="@+id/smoker_yes_edit"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textAllCaps="false"
+                            android:textColor="@color/white"
                             android:background="@drawable/border_left_green"
                             android:text="@string/yes"
                             android:textSize="16sp"/>
-
                         <Button
+                            android:id="@+id/smoker_no_edit"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textAllCaps="false"
                             android:background="@drawable/border_gray_transparent"
                             android:text="@string/no"
                             android:textSize="16sp"/>
-
                         <Button
+                            android:id="@+id/smoker_indifferent_edit"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textAllCaps="false"
@@ -664,7 +687,7 @@
                     </LinearLayout>
                 </LinearLayout>
 
-                <!--My orientation-->
+                <!--Zodiac sign-->
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -686,7 +709,7 @@
                         android:layout_marginLeft="38dp"
                         android:background="@drawable/border_green_soft_transparent_round">
                         <Spinner
-                            android:id="@+id/spinner_zodiac"
+                            android:id="@+id/spinner_zodiac_edit"
                             android:layout_width="match_parent"
                             android:layout_height="40dp"
                             android:paddingLeft="2dp"
@@ -745,20 +768,22 @@
                     android:gravity="center">
 
                     <ImageButton
-                        android:id="@+id/photo_1_profile"
+                        android:id="@+id/photo_1_edit"
                         android:layout_width="120dp"
                         android:layout_height="120dp"
                         android:layout_marginRight="8dp"
-                        android:padding="40dp"
+                        android:scaleType="centerInside"
+                        android:padding="4dp"
                         android:background="@drawable/border_white_green_soft_round"
                         android:src="@drawable/icon_camera" />
 
                     <ImageButton
-                        android:id="@+id/photo_2_profile"
+                        android:id="@+id/photo_2_edit"
                         android:layout_width="120dp"
                         android:layout_height="120dp"
                         android:layout_marginLeft="8dp"
-                        android:padding="40dp"
+                        android:scaleType="centerInside"
+                        android:padding="4dp"
                         android:background="@drawable/border_white_green_soft_round"
                         android:src="@drawable/icon_camera"/>
 
@@ -775,20 +800,22 @@
                     android:gravity="center">
 
                     <ImageButton
-                        android:id="@+id/photo_3_profile"
+                        android:id="@+id/photo_3_edit"
                         android:layout_width="120dp"
                         android:layout_height="120dp"
                         android:layout_marginRight="8dp"
-                        android:padding="40dp"
+                        android:scaleType="centerInside"
+                        android:padding="4dp"
                         android:background="@drawable/border_white_green_soft_round"
                         android:src="@drawable/icon_camera"/>
 
                     <ImageButton
-                        android:id="@+id/photo_4_profile"
+                        android:id="@+id/photo_4_edit"
                         android:layout_width="120dp"
                         android:layout_height="120dp"
                         android:layout_marginLeft="8dp"
-                        android:padding="40dp"
+                        android:scaleType="centerInside"
+                        android:padding="4dp"
                         android:src="@drawable/icon_camera"
                         android:background="@drawable/border_white_green_soft_round"
                         />
@@ -807,20 +834,22 @@
                     android:gravity="center">
 
                     <ImageButton
-                        android:id="@+id/photo_5_profile"
+                        android:id="@+id/photo_5_edit"
                         android:layout_width="120dp"
                         android:layout_height="120dp"
                         android:layout_marginRight="8dp"
-                        android:padding="40dp"
+                        android:scaleType="centerInside"
+                        android:padding="4dp"
                         android:background="@drawable/border_white_green_soft_round"
                         android:src="@drawable/icon_camera"/>
 
                     <ImageButton
-                        android:id="@+id/photo_6_profile"
+                        android:id="@+id/photo_6_edit"
                         android:layout_width="120dp"
                         android:layout_height="120dp"
                         android:layout_marginLeft="8dp"
-                        android:padding="40dp"
+                        android:scaleType="centerInside"
+                        android:padding="4dp"
                         android:background="@drawable/border_white_green_soft_round"
                         android:src="@drawable/icon_camera" />
 
@@ -873,7 +902,7 @@
                     android:orientation="horizontal">
 
                     <Button
-                        android:id="@+id/button_photo_preference_profile"
+                        android:id="@+id/button_photo_preference_edit"
                         android:layout_width="120dp"
                         android:layout_height="48dp"
                         android:layout_marginRight="5dp"
@@ -884,7 +913,7 @@
                         android:drawableLeft="@drawable/camera_icon"
                         android:background="@drawable/border_green_soft_transparent_round"/>
                     <Button
-                        android:id="@+id/button_shopping_preference_profile"
+                        android:id="@+id/button_shopping_preference_edit"
                         android:layout_width="120dp"
                         android:layout_height="48dp"
                         android:layout_marginLeft="5dp"
@@ -906,7 +935,7 @@
                     android:orientation="horizontal">
 
                     <Button
-                        android:id="@+id/button_karaoke_preference_profile"
+                        android:id="@+id/button_karaoke_preference_edit"
                         android:layout_width="120dp"
                         android:layout_height="48dp"
                         android:layout_marginRight="5dp"
@@ -917,7 +946,7 @@
                         android:drawableLeft="@drawable/microphone"
                         android:background="@drawable/border_green_soft_transparent_round"/>
                     <Button
-                        android:id="@+id/button_yoga_preference_profile"
+                        android:id="@+id/button_yoga_preference_edit"
                         android:layout_width="120dp"
                         android:layout_height="48dp"
                         android:layout_marginLeft="5dp"
@@ -936,7 +965,7 @@
                     android:layout_height="60dp"
                     android:orientation="horizontal">
                     <Button
-                        android:id="@+id/button_cooking_preference_profile"
+                        android:id="@+id/button_cooking_preference_edit"
                         android:layout_width="120dp"
                         android:layout_height="48dp"
                         android:layout_marginRight="5dp"
@@ -947,7 +976,7 @@
                         android:drawableLeft="@drawable/food_icon"
                         android:background="@drawable/border_green_soft_transparent_round"/>
                     <Button
-                        android:id="@+id/button_tennis_preference_profile"
+                        android:id="@+id/button_tennis_preference_edit"
                         android:layout_width="120dp"
                         android:layout_height="48dp"
                         android:layout_marginLeft="5dp"
@@ -967,7 +996,7 @@
                     android:orientation="horizontal">
 
                     <Button
-                        android:id="@+id/button_sports_preference_profile"
+                        android:id="@+id/button_sports_preference_edit"
                         android:layout_width="120dp"
                         android:layout_height="48dp"
                         android:layout_marginRight="5dp"
@@ -978,7 +1007,7 @@
                         android:drawableLeft="@drawable/sport_icon"
                         android:background="@drawable/border_green_soft_transparent_round"/>
                     <Button
-                        android:id="@+id/button_swim_preference_profile"
+                        android:id="@+id/button_swim_preference_edit"
                         android:layout_width="120dp"
                         android:layout_height="48dp"
                         android:layout_marginLeft="5dp"
@@ -998,7 +1027,7 @@
                     android:orientation="horizontal">
 
                     <Button
-                        android:id="@+id/button_art_preference_profile"
+                        android:id="@+id/button_art_preference_edit"
                         android:layout_width="120dp"
                         android:layout_height="48dp"
                         android:layout_marginRight="5dp"
@@ -1009,7 +1038,7 @@
                         android:drawableLeft="@drawable/art_icon"
                         android:background="@drawable/border_green_soft_transparent_round"/>
                     <Button
-                        android:id="@+id/button_travel_preference_profile"
+                        android:id="@+id/button_travel_preference_edit"
                         android:layout_width="120dp"
                         android:layout_height="48dp"
                         android:layout_marginLeft="5dp"
@@ -1029,7 +1058,7 @@
                     android:orientation="horizontal">
 
                     <Button
-                        android:id="@+id/button_extreme_preference_profile"
+                        android:id="@+id/button_extreme_preference_edit"
                         android:layout_width="120dp"
                         android:layout_height="48dp"
                         android:layout_marginRight="5dp"
@@ -1040,7 +1069,7 @@
                         android:drawableLeft="@drawable/parachute_icon"
                         android:background="@drawable/border_green_soft_transparent_round"/>
                     <Button
-                        android:id="@+id/button_music_preference_profile"
+                        android:id="@+id/button_music_preference_edit"
                         android:layout_width="120dp"
                         android:layout_height="48dp"
                         android:layout_marginLeft="5dp"
@@ -1061,7 +1090,7 @@
                     android:orientation="horizontal">
 
                     <Button
-                        android:id="@+id/button_drink_preference_profile"
+                        android:id="@+id/button_drink_preference_edit"
                         android:layout_width="120dp"
                         android:layout_height="48dp"
                         android:layout_marginRight="5dp"
@@ -1072,7 +1101,7 @@
                         android:drawableLeft="@drawable/wine_icon"
                         android:background="@drawable/border_green_soft_transparent_round"/>
                     <Button
-                        android:id="@+id/button_game_preference_profile"
+                        android:id="@+id/button_game_preference_edit"
                         android:layout_width="120dp"
                         android:layout_height="48dp"
                         android:layout_marginLeft="5dp"
