--- a/app/src/main/res/layout/fragment_chats.xml
+++ b/app/src/main/res/layout/fragment_chats.xml
@@ -31,16 +31,17 @@
         </LinearLayout>
 
         <androidx.cardview.widget.CardView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
             android:layout_marginLeft="-50dp"
             app:cardElevation="0dp"
             app:cardCornerRadius="30dp">
 
             <ImageView
                 android:id="@+id/profile_from_chats"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:src="@drawable/photo_main"/>
         </androidx.cardview.widget.CardView>
 
@@ -52,11 +53,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="horizontal"
-        android:layout_height="48dp"
+        android:layout_height="45dp"
         android:layout_marginTop="15dp"
         android:layout_marginBottom="10dp"
-        android:layout_marginHorizontal="35dp"
-        android:background="@drawable/border_gray_transparent">
+        android:layout_marginHorizontal="50dp"
+        android:background="@drawable/border_gray_transparent_round">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -72,7 +73,7 @@
             android:paddingLeft="10dp"
             android:layout_marginVertical="5dp"
             android:background="@android:color/transparent"
-            android:textSize="20sp"
+            android:textSize="16sp"
             android:textColor="@color/gray1"
             android:textColorHint="@color/gray1"
             android:hint="@string/search_hint"/>
