--- a/app/src/main/res/layout/fragment_likes.xml
+++ b/app/src/main/res/layout/fragment_likes.xml
@@ -31,16 +31,17 @@
         </LinearLayout>
 
         <androidx.cardview.widget.CardView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
             android:layout_marginLeft="-50dp"
             app:cardElevation="0dp"
             app:cardCornerRadius="30dp">
 
             <ImageView
                 android:id="@+id/profile_from_likes"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:src="@drawable/photo_main"/>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
