--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -35,28 +35,22 @@
             </LinearLayout>
 
             <androidx.cardview.widget.CardView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
                 android:layout_marginLeft="-50dp"
                 app:cardElevation="0dp"
                 app:cardCornerRadius="30dp">
 
                 <ImageView
                     android:id="@+id/profile_from_notifications"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:src="@drawable/photo_main"/>
             </androidx.cardview.widget.CardView>
         </LinearLayout>
 
-        <!--Divider deactivate-->
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginTop="40dp"
-            android:layout_marginHorizontal="40dp"
-            android:background="@color/gray1"/>
-
+        <!--Examples-->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -67,150 +61,40 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="10"
-                android:text="@string/deactivate_notifications"
+                android:text="@string/new_message_alert"
+                android:paddingRight="5dp"
                 android:textColor="@color/black"
-                android:textSize="18sp"/>
-
-            <Switch
-                android:id="@+id/switch_return"
-                android:layout_width="60dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"/>
-
-        </LinearLayout>
-
-        <!--Divider message-->
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginHorizontal="40dp"
-            android:background="@color/gray1"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginHorizontal="40dp"
-            android:orientation="horizontal">
-
+                android:textSize="16sp"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="10"
-                android:text="@string/message_receive_ntf"
+                android:text="Alguien"
                 android:textColor="@color/black"
                 android:textSize="16sp"/>
 
-            <RadioButton
-                android:id="@+id/notification_message"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:checked="true"/>
-
         </LinearLayout>
-
-        <!--Divider match-->
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginHorizontal="40dp"
-            android:background="@color/gray1"/>
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginHorizontal="40dp"
             android:orientation="horizontal">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="10"
-                android:text="@string/match_done_ntf"
+                android:text="@string/new_match_alert"
+                android:paddingRight="5dp"
                 android:textColor="@color/black"
                 android:textSize="16sp"/>
-
-            <RadioButton
-                android:id="@+id/notification_match"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:checked="true"/>
-
-        </LinearLayout>
-
-        <!--Divider Like-->
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginHorizontal="40dp"
-            android:background="@color/gray1"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginHorizontal="40dp"
-            android:orientation="horizontal">
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="10"
-                android:text="@string/like_received_ntf"
+                android:text="Alguien"
                 android:textColor="@color/black"
                 android:textSize="16sp"/>
 
-            <RadioButton
-                android:id="@+id/notification_likes"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:checked="true"/>
-
         </LinearLayout>
-
-        <!--Divider cross-->
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginHorizontal="40dp"
-            android:background="@color/gray1"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginHorizontal="40dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="10"
-                android:text="@string/cross_with_ntf"
-                android:textColor="@color/black"
-                android:textSize="16sp"/>
-
-            <RadioButton
-                android:id="@+id/notification_cross"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:checked="true"/>
-
-        </LinearLayout>
-
-        <!--Divider-->
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginHorizontal="40dp"
-            android:background="@color/gray1"/>
 
     </LinearLayout>
 </LinearLayout>
