--- a/app/src/main/res/layout/spinner_custom_textview.xml
+++ b/app/src/main/res/layout/spinner_custom_textview.xml
@@ -6,7 +6,7 @@
     android:gravity="center_vertical"
     android:paddingTop="1dp"
     android:paddingBottom="1dp"
-    android:textColorHint="@color/white"
+    android:textColorHint="@color/green2"
     android:singleLine="false"
-    android:textColor="@color/white"
+    android:textColor="@color/green2"
     android:textSize="@dimen/font_size"/>
