Slider rango de edad, intento spinner cities
faltan cosas visuales y de update

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -460,7 +460,8 @@
                             android:layout_width="match_parent"
                             android:layout_height="20dp"
                             android:layout_marginTop="10dp"
-                            android:layout_gravity="center"/>
+                            android:layout_gravity="center"
+                            />
 
                         <LinearLayout
                             android:layout_width="wrap_content"
@@ -509,11 +510,13 @@
                         android:layout_marginBottom="20dp"
                         android:orientation="vertical">
 
-                        <SeekBar
+                        <com.google.android.material.slider.RangeSlider
+                            android:id="@+id/age_range_profile"
                             android:layout_width="match_parent"
-                            android:layout_height="20dp"
-                            android:layout_marginTop="10dp"
-                            android:layout_gravity="center"/>
+                            android:layout_height="wrap_content"
+                            android:valueFrom="18.0"
+                            android:valueTo="60.0"
+                            android:theme="@style/MyMaterialTheme"/>
 
                         <LinearLayout
                             android:layout_width="wrap_content"
@@ -523,12 +526,21 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginRight="110dp"
+                                android:layout_marginRight="70dp"
                                 android:text="18 años"/>
+                            <TextView
+                                android:id="@+id/min_age_profile"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginRight="30dp" />
+                            <TextView
+                                android:id="@+id/max_age_profile"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content" />
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:layout_marginLeft="110dp"
+                                android:layout_marginLeft="70dp"
                                 android:text="60 años"/>
                         </LinearLayout>
                     </LinearLayout>
